# SOPHub

SOP's/: Amazon Product Add via Upload _ SOP.docx  Sponsored Product Ads – Structure & Strategy SOP.docx  _Ad Optimization Strategies _ SOP.docx
SOP's/_extracted/: Amazon Ads_ Campaign Structures & Best Practices _ SOP.txt  Amazon PPC_ Campaign Types, Targeting & Best Practices.txt  Amazon Product Add via Upload _ SOP.txt  Amazon Sponsored Ads Campaigns Basics.txt  BRAND PROTECTION SOP.txt  Keyword Research SOP.txt  (+4 more)
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 3a0912c414ce_teams_runs_suggestions_tables_v2.py  6b4dd8afec17_add_sop_allowed_teams_and_user_teams_v2.py  76a0f0e694ad_user_teams_table.py  8f45ef1c569f_init.py  91303c32ba0a_sop_allowed_teams_and_user_teams.py  bfd11fc63598_create_sops_table.py  c7e4f90b1bae_rename_user_to_users.py  d36d08d879f7_create_users_table.py  ebeec906120e_user_teams_table.py
backend/app/: db.py  deps.py  main.py  rbac.py
backend/app/core/: security.py  settings.py
backend/app/models/: run.py  sop.py  sop_allowed_team.py  suggestion.py  team.py  user.py  user_team.py
backend/app/routers/: admin.py  ai.py  auth.py  runs.py  sops.py  suggestions.py  teams.py  users.py
backend/app/schemas/: run.py  sop.py  suggestion.py  team.py  user.py
backend/media/uploads/: 4441c0f2-a266-46bf-8f7a-1fcb108e7496.docx  b1e37298-bd02-453a-901b-6cf80cab31f8.docx  e4f1a943-75c5-4e4f-a308-cceda52cf85c.docx
frontend/: package-lock.json
infra/: docker-compose.yml
(+23 files in other folders)
